# bittensor-emissions-tracker

./: .gitignore  AGENT.md  LICENSE  MINING_GUIDE.md  Makefile  README.md  SANITIZATION_RULES.md  TRANSACTIONS.md  pyproject.toml  test_slippage_fix.py
.cursor/rules/: agent-context.mdc
emissions_tracker/: __init__.py  client.py  config.py  exceptions.py  journal.py  main.py  mining.py  models.py  sheet_names.py  tracker.py  utils.py  wallet.py
emissions_tracker/clients/: __init__.py  kraken_statement.py  price.py  taostats.py  wallet.py
emissions_tracker/entrypoints/: __init__.py  contract.py  kraken.py  mining.py  payment.py  reconcile_summary.py
emissions_tracker/trackers/: __init__.py  bittensor_tracker.py  contract_tracker.py  mining_tracker.py  payment_tracker.py
makefiles/: local.mk
scripts/: test.sh
tests/: utils.py
tests/fixtures/: __init__.py  mock_clients.py  mock_config.py  mock_data.py  mock_mining_data.py  mock_sheets.py  test_tracker.py
tests/integration/: test_batch_lot_consumption.py  test_kraken_entrypoint.py  test_large_sample.py  test_simple_sample.py  test_tao_holdings_balance.py  test_tracker_flow.py
tests/unit/: conftest.py  test_balance_verification.py  test_contract_income.py  test_disposals.py  test_expenses.py  test_header_migration.py  test_journal_entries.py  test_kraken_reconcile.py  test_kraken_statement.py  test_mining_run_tracker.py  test_mining_staking_emissions.py  test_payment_tracker.py  test_regenerate.py  test_regressions.py  test_run_tracker.py  test_sales.py  test_staking_emissions.py  test_taostats_client.py  (+3 more)
(+21 files in other folders)
