[tool.poetry]
name = "emissions-tracker"
version = "0.1.0"
description = ""
authors = ["Kyle Widmann <kyle.widmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
autoflake = "^2.3.1"
bittensor = "^9.12.0"
oauth2client = "^4.1.3"
gspread = "^6.2.1"
pydantic-settings = "^2.11.0"
substrate-interface = "^1.7.11"
backoff = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
bandit = "^1.7.8"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[tool.poetry.scripts]
track-emissions = "emissions_tracker.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.coverage.report]
# Regexes for lines to exclude from considerationm
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
omit = [
]